[gd_scene load_steps=11 format=3 uid="uid://cdbosm8b8nl7u"]

[ext_resource type="Theme" uid="uid://b43o8w87vgskk" path="res://addons/dialogue_quest/resources/themes/default/default_theme.tres" id="1_x52xv"]
[ext_resource type="Script" path="res://scripts/ui/main_screen.gd" id="2_2kft4"]
[ext_resource type="PackedScene" uid="uid://cfk008pj0rpwm" path="res://prefabs/ui/window_sizer.tscn" id="2_aobv4"]
[ext_resource type="PackedScene" uid="uid://ttdif58g3l3i" path="res://addons/dialogue_quest/prefabs/ui/dialogue/components/dialogue_box/dialogue_box.tscn" id="4_51x4x"]
[ext_resource type="PackedScene" uid="uid://dsw6sarig3ypq" path="res://prefabs/ui/create_character_menu.tscn" id="4_ve8rl"]
[ext_resource type="PackedScene" uid="uid://dye384gy0fmiu" path="res://addons/dialogue_quest/prefabs/ui/dialogue/components/choice_menu/choice_menu.tscn" id="5_54to3"]
[ext_resource type="Script" path="res://addons/dialogue_quest/scripts/ui/dialogue/components/dialogue_player.gd" id="6_xdbva"]
[ext_resource type="Script" path="res://addons/dialogue_quest/scripts/ui/dialogue/components/resources/settings/dialogue_player_settings.gd" id="7_v3os3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4qlwc"]
bg_color = Color(0.333333, 0.156863, 0.027451, 0.392157)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.462745, 0.188235, 0, 1)
border_blend = true

[sub_resource type="Resource" id="Resource_mm2cm"]
script = ExtResource("7_v3os3")
autoplay_enabled = false
autoplay_delay_sec = 0.5
autoplay_on_start = true
run_expressions_as_script = false

[node name="MainScreen" type="PanelContainer"]
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -736.0
offset_right = 736.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_x52xv")
script = ExtResource("2_2kft4")

[node name="WindowSizer" parent="." node_paths=PackedStringArray("_main_screen") instance=ExtResource("2_aobv4")]
_main_screen = NodePath("..")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Panel" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_x52xv")
theme_type_variation = &"PanelContainerForeground"
theme_override_styles/panel = SubResource("StyleBoxFlat_4qlwc")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Panel"]
layout_mode = 2

[node name="CreateCharacterButton" type="Button" parent="VBoxContainer/Panel/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Create Character"

[node name="Margin" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Margin"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Margin/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Margin/VBoxContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/Margin/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "DialogueQuest directory"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="VBoxContainer/Margin/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
tooltip_text = "The folder on your computer where DialogueQuest will look for files (dialogues, characters, etc.)"
mouse_filter = 0
text = "|?|"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/Margin/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Margin/VBoxContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="DialogueQuestDirInput" type="LineEdit" parent="VBoxContainer/Margin/VBoxContainer/VBoxContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "C:\\the_folder_where_dialogues_are"

[node name="DialogueQuestDirBrowse" type="Button" parent="VBoxContainer/Margin/VBoxContainer/VBoxContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "..."

[node name="DialogueQuestDirDialog" type="FileDialog" parent="VBoxContainer/Margin/VBoxContainer/VBoxContainer/MarginContainer/HBoxContainer/DialogueQuestDirBrowse"]
unique_name_in_owner = true
title = "Open a Directory"
size = Vector2i(637, 154)
theme = ExtResource("1_x52xv")
ok_button_text = "Select Current Folder"
file_mode = 2
access = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/Margin/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Margin/VBoxContainer/VBoxContainer2"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/Margin/VBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
text = "Dialogue"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="VBoxContainer/Margin/VBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
tooltip_text = "The name or full file path of the dialogue to run."
mouse_filter = 0
text = "|?|"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/Margin/VBoxContainer/VBoxContainer2"]
layout_mode = 2
alignment = 1

[node name="DialogueInput" type="LineEdit" parent="VBoxContainer/Margin/VBoxContainer/VBoxContainer2/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
placeholder_text = "example_dialogue"
alignment = 1
expand_to_text_length = true

[node name="DialogueInputBrowse" type="MenuButton" parent="VBoxContainer/Margin/VBoxContainer/VBoxContainer2/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "V"
flat = false
item_count = 1
popup/item_0/text = ""
popup/item_0/id = 0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/Margin/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 20
theme_override_constants/margin_bottom = 20

[node name="RunButton" type="Button" parent="VBoxContainer/Margin/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "Run"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="CreateCharacterMenu" parent="CanvasLayer" instance=ExtResource("4_ve8rl")]
unique_name_in_owner = true
visible = false
offset_left = -129.5
offset_top = -130.5
offset_right = 129.5
offset_bottom = 130.5

[node name="DialogueBox" parent="CanvasLayer" instance=ExtResource("4_51x4x")]
visible = false

[node name="ChoiceMenu" parent="CanvasLayer/DialogueBox" instance=ExtResource("5_54to3")]
layout_mode = 2

[node name="DialoguePlayer" type="Node" parent="CanvasLayer" node_paths=PackedStringArray("dialogue_box", "choice_menu")]
unique_name_in_owner = true
script = ExtResource("6_xdbva")
settings = SubResource("Resource_mm2cm")
dialogue_box = NodePath("../DialogueBox")
choice_menu = NodePath("../DialogueBox/ChoiceMenu")
